# magicpak

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-bake.hcl  rust-toolchain.toml
.github/workflows/: release.yml  test.yml
dockerfile/: build.sh  images.json
dockerfile/debian/: Dockerfile
example/brittany/: Dockerfile
example/clang-format/: Dockerfile
example/patchelf/: Dockerfile
src/: action.rs  base.rs  domain.rs  error.rs  magicpak.rs
src/action/: bundle_dynamic_dependencies.rs  bundle_executable.rs  bundle_shared_object_dependencies.rs  compress_executable.rs  emit.rs  exclude_glob.rs  include_glob.rs  make_directory.rs  test.rs
src/base/: command_ext.rs  error.rs  log.rs  trace.rs
src/domain/: bundle.rs  bundle_path.rs  executable.rs  jail.rs  resource.rs
src/domain/executable/: resolver.rs  search_paths.rs
