[package]
name = "magicpak"
version = "1.2.0"
authors = ["coord_e <me@coord-e.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Build minimal docker images without static linking"
homepage = "https://github.com/coord-e/magicpak"
repository = "https://github.com/coord-e/magicpak"
keywords = ["docker"]
categories = ["development-tools"]

[[bin]]
name = "magicpak"
path = "src/bin/main.rs"

[lib]
name = "magicpak"
path = "src/magicpak.rs"

[dependencies]
auxv = "0.3.3"
fern = "0.6.0"
glob = "0.3.0"
goblin = "0.2"
libc = "0.2.68"
log = "0.4"
nix = "0.19.1"
structopt = "0.3.11"
tempfile = "3.1.0"
which = "4.0"

[dev-dependencies]
assert_cmd = "1.0.1"
assert_fs = "1.0.0"
predicates = "1.0.4"
reqwest = { version = "0.10.4", default-features = false, features = ["blocking", "rustls-tls"] }
