[package]
name = "magicpak"
version = "1.4.0"
authors = ["coord_e <me@coord-e.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Build minimal docker images without static linking"
homepage = "https://github.com/coord-e/magicpak"
repository = "https://github.com/coord-e/magicpak"
keywords = ["docker"]
categories = ["development-tools"]

[[bin]]
name = "magicpak"
path = "src/bin/main.rs"

[lib]
name = "magicpak"
path = "src/magicpak.rs"

[dependencies]
clap = { version = "4", features = ["env", "derive"] }
crt0stack = "0.1"
glob = "0.3.1"
goblin = "0.6"
nix = "0.26"
tempfile = "3.4.0"
tracing = "0.1"
tracing-subscriber = "0.3"
which = "4.4"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1.0.10"
predicates = "3"
